# biosignal-train

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
campaigns/: README.md  galaxyppg.yaml  mitbih.yaml
configs/: eval.yaml  train.yaml
configs/dataset/: ecg_npz.yaml  galaxyppg.yaml  mitbih.yaml  ppg_acc_parquet.yaml
configs/experiment/: galaxyppg_hr_ppg.yaml  mitbih_aami3_cnn.yaml
configs/hydra/job_logging/: per_rank.yaml
configs/logger/: mlflow.yaml  none.yaml  wandb.yaml
configs/model/: cnn_transformer_regressor.yaml  conv_mae1d.yaml  deep_encoder_classifier.yaml  encoder_classifier.yaml  multimodal_fusion.yaml  perceiver_fusion.yaml  resnet1d.yaml  tcn_segmenter.yaml  transformer1d.yaml  wide_encoder_test.yaml
configs/task/: classification.yaml  detection.yaml  regression.yaml  segmentation.yaml  ssl_masked_recon.yaml
configs/trainer/: default.yaml  fast_dev.yaml
configs/transforms/ecg/: basic.yaml
configs/transforms/eeg/: basic.yaml
configs/transforms/galaxyppg/: hr_fusion.yaml  hr_ppg.yaml
configs/transforms/mitbih/: aami3.yaml
configs/transforms/ssl/: ssl_masks.yaml
configs/transforms/wearables/: ppg_acc_basic.yaml  ppg_acc_ssl.yaml
docs/: agent.md
docs/examples/: campaign_dashboard.html  campaign_data.json
notebooks/: galaxyppg_eda.ipynb  mitbih_eda.ipynb
scripts/: demo_dashboard.py
scripts/eval/: posthoc_report.py
scripts/standardize/galaxyppg/: standardize_galaxyppg_v1.py
scripts/standardize/mitbih/: standardize_mitbih_v1.py
src/biosignals/agent/: __init__.py  campaigns.py  dashboard.py  feedback.py  hooks.py  orchestrator.py  pipeline.py  run.py  tools.py
src/biosignals/cli/: eval.py  train.py
src/biosignals/config/: schema.py
src/biosignals/data/: collate.py  datamodule.py  types.py
src/biosignals/data/datasets/: base.py  ecg_npz.py  manifest_windows.py  ppg_acc_parquet.py  windowed_npz.py  wrappers.py
src/biosignals/data/transforms/: aug.py  base.py  compose.py  factory.py  resample.py  signal_ops.py
src/biosignals/engine/: loops.py  trainer.py
src/biosignals/eval/: calibration.py
src/biosignals/loggers/: base.py  mlflow.py  wandb.py
src/biosignals/metrics/: base.py  classification.py  detection.py  regression.py  segmentation.py
src/biosignals/models/: base.py
src/biosignals/models/architectures/: encoder_classifier.py  multimodal_fusion.py  perceiver_fusion.py  resnet1d.py  tcn_segmenter.py  transformer1d.py
src/biosignals/models/backbones/: conv1d.py  resnet1d.py  tcn_segmenter.py  transformer1d.py
src/biosignals/models/fusion/: late_fusion.py  perceiver_fusion.py
src/biosignals/models/heads/: classification.py  segmentation.py
src/biosignals/models/ssl/: conv_mae1d.py
src/biosignals/tasks/: base.py  classification.py  detection.py  regression.py  segmentation.py  ssl_masked_recon.py
src/biosignals/utils/: checkpointing.py  distributed.py  io.py  logging.py  paths.py  reproducibility.py
tests/: test_campaigns.py  test_code_generation.py  test_config_discovery.py  test_config_generation.py  test_dashboard.py  test_feedback_store.py  test_hooks.py  test_simple_orchestration.py
